feat: disable gear rating and set piece drop chance in seasonal realms
* rifts have set piece / gear rating drop chance enabled
* rifts have legendaries and epics disabled

--- a/Content/json/realms/realm/season-one.jsonc
+++ b/Content/json/realms/realm/season-one.jsonc
@@ -6,9 +6,11 @@
     "Description": "The first season of Pourtide",
     "CanBeHomeworld": true,
     "HideoutEnabled": false,
-    "MinorCantripDropRate": 1,
+    "MinorCantripDropRate": 0.1,
     "MajorCantripDropRate": 0,
     "EpicCantripDropRate": 0,
-    "LegendaryCantripDropRate": 0
+    "LegendaryCantripDropRate": 0,
+    "HasGearRatingDrops": false,
+    "HasEquipmentSetDrops": false
   }
 }
