feat: add cantrip morph gems
* added cantrip extraction gems, that allow you to extract random cantrip spells from any item
* added cantrip morph gems that allow you to apply extracted cantrip spells to items
* added cantrip upgrade gems (major, epic, legendary) that allow you to upgrade a random cantrip spell on an item
* added SpellManager to map SpellIds to client readable spell names

--- a/Source/ACE.Server/ACE.Server.csproj
+++ b/Source/ACE.Server/ACE.Server.csproj
@@ -289,6 +289,9 @@
     <None Update="Features\Dungeons\dungeon_ids.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Features\Spells\spells.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="images\ace-retro-icon2.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
