feat: add core logic for spell chaining
* added SpellChainChance realm property
* added SpellChainChance WorldObject property
* spells that chain have 50% reduced damage
* chain spells do not bounce to ally players in pvp

--- a/Content/json/realms/realm/season-one.jsonc
+++ b/Content/json/realms/realm/season-one.jsonc
@@ -9,6 +9,7 @@
     "MinorCantripDropRate": 0.1,
     "MajorCantripDropRate": 0,
     "EpicCantripDropRate": 0,
+    "SpellChainChance": 1.0,
     "LegendaryCantripDropRate": 0,
     "HasGearRatingDrops": false,
     "HasEquipmentSetDrops": false
