feat: increase max spell chain range to 100

--- a/Content/json/realms/realm/season-one.jsonc
+++ b/Content/json/realms/realm/season-one.jsonc
@@ -11,6 +11,7 @@
     "EpicCantripDropRate": 1,
     "LegendaryCantripDropRate": 1,
     "HasGearRatingDrops": false,
-    "HasEquipmentSetDrops": false
+    "HasEquipmentSetDrops": false,
+    "MaxSpellChainRange": 100
   }
 }
