feat: added ability to change seasons
* names of players from past seasons are renamed with their home realm alias
* housing in past seasons are evicted and disabled for repurchase

--- a/Content/json/realms/realm/season-one.jsonc
+++ b/Content/json/realms/realm/season-one.jsonc
@@ -4,6 +4,7 @@
   "parent": "Modern Realm (PvP)",
   "properties": {
     "Description": "The first season of Pourtide",
+    "Alias": "S1",
     "CanBeHomeworld": true,
     "HideoutEnabled": false,
     "MinorCantripDropRate": 1,
