--- a/Content/json/realms/realm/season-two.jsonc
+++ b/Content/json/realms/realm/season-two.jsonc
@@ -4,12 +4,14 @@
   "parent": "Modern Realm (PvP)",
   "properties": {
     "Description": "The second season of Pourtide",
+    "Alias": "S2",
     "CanBeHomeworld": true,
     "HideoutEnabled": false,
     "MinorCantripDropRate": 1,
     "MajorCantripDropRate": 0.005,
     "EpicCantripDropRate": 0.003,
     "LegendaryCantripDropRate": 0.001,
+    "HasHousing": false,
     "HasGearRatingDrops": false,
     "HasEquipmentSetDrops": false,
     "MaxSpellChainRange": 20
