--- a/Content/json/realms/realm/classic-pve.jsonc
+++ b/Content/json/realms/realm/classic-pve.jsonc
@@ -2,6 +2,7 @@
   "name": "Classic",
   "type": "Realm",
   "properties": {
-    "Description": "The classic PvE Realm"
+    "Description": "The classic PvE Realm",
+    "Alias": "CPVE"
   }
 }
