fix: use homerealm when checking for duel realm during season change character rename
* add an alias to duels and rift realm/ruleset

--- a/Content/json/realms/realm/duels.jsonc
+++ b/Content/json/realms/realm/duels.jsonc
@@ -3,6 +3,7 @@
   "type": "Realm",
   "properties": {
     "Description": "The Dueling Realm - All characters boosted to max",
+    "Alias": "Duel",
     "IsDuelingRealm": true,
     "CanBeHomeworld": true,
     "IsNeutralZone": false,
