--- a/Content/json/realms/ruleset/rift.jsonc
+++ b/Content/json/realms/ruleset/rift.jsonc
@@ -3,6 +3,7 @@
   "type": "Ruleset",
   "properties": {
     "Description": "This represents a dungeon rift",
+    "Alias": "Rift",
     "IsNeutralZone": true,
     "ReplaceMobs": false,
     "HasRecalls": false,
