fix: remove academy token creation in player factory
* disable GetPlayerLevelXpModifier
* remove duel realm temporarily

--- a/Content/json/realms/realm/duels.jsonc
+++ b/Content/json/realms/realm/duels.jsonc
@@ -5,7 +5,7 @@
     "Description": "The Dueling Realm - All characters boosted to max",
     "Alias": "Duel",
     "IsDuelingRealm": true,
-    "CanBeHomeworld": true,
+    "CanBeHomeworld": false,
     "IsNeutralZone": false,
     "CanInteractWithNeutralZone": true,
     "HideoutEnabled": false
